Ajustes varios Suma, Prepago, solicitados en la revisión de liberación (ver documento)

--- a/Suma2Lealtad/Views/AfiliadoSuma/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/Acreditar.cshtml
@@ -72,7 +72,7 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         <input type="submit" class="btn btn-success btn-md" value="Acreditar" />
-                        <a href="@Url.Action("FilterBeneficiarios", "AfiliadoSuma")" class="btn btn-danger btn-md">Regresar</a>
+                        <a href="@Url.Action("FilterReview", "AfiliadoSuma")" class="btn btn-danger btn-md">Regresar</a>
                     </div>
                 </div>
 
