--- a/Suma2Lealtad/Views/ClientePrepago/ImpresoraImprimirTarjeta.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/ImpresoraImprimirTarjeta.cshtml
@@ -139,7 +139,7 @@
                 <div class="col-md-12 col-btn">
                     <div class="pull-right">
                         @*<input id="submit" name="submit" type="submit" class="btn btn-success btn-md" value="Activar Tarjeta" style="display: none" />*@
-                        <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                        <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                     </div>
                 </div>
 
