--- a/Suma2Lealtad/Views/ClientePrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/Index.cshtml
@@ -72,7 +72,7 @@
                                         @Html.DisplayFor(modelItem => item.emailCliente)
                                     </td>
                                     <td>
-                                        <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = item.idCliente })" class="btn btn-success btn-sm">
+                                        <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = item.idCliente })" class="btn btn-success btn-sm">
                                             <span class="glyphicon glyphicon-user"></span>
                                         </a>
                                     </td>
