--- a/Suma2Lealtad/Views/Reporte/ReporteTransacciones.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteTransacciones.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<Suma2Lealtad.Models.ReportePrepago>
+﻿@model IEnumerable<Suma2Lealtad.Models.ReporteSuma>
 
 @{
-    ViewBag.Title = "Prepago / Reportes / Reporte de Recargas";
+    ViewBag.Title = "Suma / Reportes / Reporte de Transacciones";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,7 +10,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Reportes / Reporte de Recrgas</h3>
+            <h3 class="panel-title">Suma / Reportes / Reporte de Transacciones</h3>
         </div>
 
         <div class="panel-body">
@@ -31,24 +31,12 @@
                 @Html.TextBoxFor(model => model.First().Encabezado.nombreReporte, new { @class = "form-control", @readonly = "true" })
             </div>
 
-            <div id="TipoConsulta" class="editor-label col-md-4 control-label">
-                Tipo de Consulta :
-            </div>
-
-            <div class="editor-field col-md-6">
-                @Html.TextBoxFor(model => model.First().Encabezado.tipoconsultaReporte, new { @class = "form-control", @readonly = "true" })
-            </div>
-
             <div class="editor-label col-md-4 control-label numdoc">
-                Número de Documento / Cédula :
-            </div>
-
-            <div class="editor-label col-md-4 control-label idCliente">
-                Cliente :
+                Afiliado :
             </div>
 
             <div class="editor-field col-md-6">
-                @Html.TextBoxFor(model => model.First().Encabezado.parametrotipoconsultaReporte, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBoxFor(model => model.First().Encabezado.numdocReporte, new { @class = "form-control", @readonly = "true" })
             </div>
 
             <div class="editor-label col-md-4 control-label">
@@ -68,11 +56,11 @@
             </div>
 
             <div class="editor-label col-md-4 control-label">
-                Documento de Referencia :
+                Tipo de Transacción :
             </div>
 
             <div class="editor-field col-md-6">
-                @Html.TextBoxFor(model => model.First().Encabezado.documentoreferenciaReporte, new { @class = "form-control", @readonly = "true" })
+                @Html.TextBoxFor(model => model.First().Encabezado.tipotransaccionReporte, new { @class = "form-control", @readonly = "true" })
             </div>
 
             @*<div class="editor-field col-md-12">
@@ -100,17 +88,17 @@
 
                 <thead>
                     <tr>
-                        <th>Cliente
-                        </th>
-                        <th>Beneficiario
+                        <th>Nombre
                         </th>
                         <th>Fecha
                         </th>
+                        <th>Número de Tarjeta
+                        </th>
                         <th>Monto
                         </th>
-                        <th>Nro. de Orden
-                        </th>
-                        <th>Doc. Referencia
+                        <th>Descripción
+                        </th>                                                
+                        <th>Tipo de Transacción
                         </th>
                     </tr>
                 </thead>
@@ -122,23 +110,23 @@
                         {                            
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Beneficiario.Cliente.nameCliente)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.name) @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.lastname1)
+                                @Html.DisplayFor(modelItem => item.Afiliado.name) @Html.DisplayFor(modelItem => item.Afiliado.lastname1)
                             </td>
                             <td>
                                 @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
                                 @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                             </td>
                             <td>
+                                @Html.DisplayFor(modelItem => item.numerotarjeta)
+                            </td>
+                            <td>
                                 @Html.DisplayFor(modelItem => item.monto)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.nroordenrecarga)
+                                @Html.DisplayFor(modelItem => item.detalle)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.referenciarecarga)
+                                @Html.DisplayFor(modelItem => item.tipo)
                             </td>
                         </tr>                            
                         }
@@ -165,8 +153,8 @@
 
             <div class="col-md-12 col-btn">
                 <div class="pull-right">
-                    <a href="@Url.Action("GenerateReporteRecargasPDF", "Reporte", new { TipoConsulta = Model.First().Parametros.TipoConsulta, fechadesde = Model.First().Parametros.fechadesde, fechahasta = Model.First().Parametros.fechahasta, idCliente = Model.First().Parametros.idCliente, numdoc = Model.First().Parametros.numdoc, Referencia = Model.First().Parametros.referencia })" class="btn btn-success btn-md">Descargar PDF</a>
-                    <a href="@Url.Action("FilterReporteRecargas", "Reporte")" class="btn btn-danger btn-md">Regresar</a>
+                    <a href="@Url.Action("GenerateReporteTransaccionesPDF", "Reporte", new { TipoTransaccion = Model.First().Parametros.tipotransaccion, fechadesde = Model.First().Parametros.fechadesde, fechahasta = Model.First().Parametros.fechahasta, numdoc = Model.First().Parametros.numdoc })" class="btn btn-success btn-md">Descargar PDF</a>
+                    <a href="@Url.Action("FilterReporteTransacciones", "Reporte")" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
@@ -181,20 +169,20 @@
 <script src="~/Scripts/jquery-2.1.3.min.js"></script>
 <script>
     $(document).ready(function () {
-        AjustarParametros();
+        //AjustarParametros();
         actualizarTotales();
     });
 
-   function AjustarParametros() {
-       if ($("#Encabezado_tipoconsultaReporte").val() == "Por Cliente") {
-            $(".idCliente").show();
-            $(".numdoc").hide();
-        }
-        else {
-            $(".idCliente").hide();
-            $(".numdoc").show();
-        }
-    }
+   //function AjustarParametros() {
+   //    if ($("#Encabezado_tipoconsultaReporte").val() == "Por Cliente") {
+   //         $(".idCliente").show();
+   //         $(".numdoc").hide();
+   //     }
+   //     else {
+   //         $(".idCliente").hide();
+   //         $(".numdoc").show();
+   //     }
+   // }
 
     function actualizarTotales() {
         var TotalTransacciones = 0;       
@@ -234,7 +222,7 @@
             $("#Aprobar").show();
         }*@
         document.getElementById('TotalTransacciones').value = TotalTransacciones;
-        document.getElementById('MontoTotalTransacciones').value = MontoTotalTransacciones.toFixed(2).toString().replace(".", ",");
+        document.getElementById('MontoTotalTransacciones').value = MontoTotalTransacciones.toFixed(0).toString().replace(".", ",");
     };
 
 </script>
