--- a/Suma2Lealtad/Views/AfiliadoSuma/GenericView.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/GenericView.cshtml
@@ -8,13 +8,23 @@
         <p>@Model.Message</p>
     </div>
 </div>
-<div class="col-md-12 col-btn">
+
+<form id="commentForm" action="@Url.Action(@Model.ActionName, @Model.ControllerName, new { id = @Model.RouteValues })" class="form-horizontal">
+    <div class="form-group">
+        <div class="col-md-12 col-btn">
+            <div class="pull-right">
+                <input type="submit" class="btn btn-success btn-md" value="Continuar" />
+            </div>
+        </div>
+    </div>
+</form>
+
+@*<div class="col-md-12 col-btn">
     <form id="commentForm" method="post" action="@Url.Action(@Model.ActionName, @Model.ControllerName)" class="form-horizontal">
-        @*@Html.HiddenFor(model => model.RouteValues)*@
         @Html.TextBox("numdoc", @Model.RouteValues, new { style="visibility:hidden", @class = "form-control" })
         <input type="submit" class="btn btn-success btn-md" value="Continuar" style="padding-right: 15px; padding-left: 15px; margin-left: 0px;" />
     </form>
-</div>
+</div>*@
 
 @*<script src="~/Scripts/jquery-2.1.3.min.js"></script>
 <script>
