--- a/Suma2Lealtad/Views/BeneficiarioPrepago/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/BeneficiarioPrepago/Acreditar.cshtml
@@ -99,7 +99,7 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         <input type="submit" class="btn btn-success btn-md" value="Acreditar" />
-                        <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                        <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                     </div>
                 </div>
 
