--- a/Suma2Lealtad/Views/ClientePrepago/FilterBeneficiario.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/FilterBeneficiario.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Suma2Lealtad.Models.ClientePrepago
 
 @{
-    ViewBag.Title = "FindBeneficiario";
+    ViewBag.Title = "FilterBeneficiario";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -22,7 +22,7 @@
                 <br />
             </div>
 
-            <form action="@Url.Action("FindBeneficiario", "ClientePrepago")" name="form" method="post" onsubmit="return validarDocumento();">
+            <form action="@Url.Action("FilterBeneficiario", "ClientePrepago")" name="form" method="post" onsubmit="return validarDocumento();">
 
                 <div class="editor-label col-md-4 control-label"></div>
                 <div class="editor-field col-md-8">
@@ -49,7 +49,7 @@
                     <div class="col-md-12 col-btn">
                         <div class="pull-right">
                             <input type="submit" class="btn btn-success btn-lg" value="Buscar" />
-                            <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                            <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                         </div>
                     </div>
                 </div>
