--- a/Suma2Lealtad/Views/ClientePrepago/IndexBeneficiarios.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/IndexBeneficiarios.cshtml
@@ -157,8 +157,8 @@
                     @*<a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>*@
                 </div>
                 <div class="pull-right">
-                    <a href="@Url.Action("FindBeneficiario", "ClientePrepago", new { id = Model.First().Cliente.idCliente })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
-                    <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.First().Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                    <a href="@Url.Action("FilterBeneficiario", "ClientePrepago", new { id = Model.First().Cliente.idCliente })" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
+                    <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.First().Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
