--- a/Suma2Lealtad/Views/ClientePrepago/PinPadCambiarPin.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/PinPadCambiarPin.cshtml
@@ -102,7 +102,7 @@
 
             <div class="col-md-12 col-tabla-btn">
                 <div class="pull-right">
-                    <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                    <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
