--- a/Suma2Lealtad/Views/ClientePrepago/SaldosMovimientos.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/SaldosMovimientos.cshtml
@@ -150,7 +150,7 @@
             <!-- buttons -->
             <div class="col-md-12 col-tabla-btn">
                 <div class="pull-right">
-                    <a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.Beneficiario.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
+                    <a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.Beneficiario.Cliente.idCliente })" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
             <!--// buttons -->
