--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
@@ -160,7 +160,7 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         <input type="submit" class="btn btn-success btn-md" value="Crear Orden" />
-                        @*<a href="@Url.Action("FilterBeneficiarios", "ClientePrepago", new { id = Model.First().idCliente })" class="btn btn-success btn-sm" > Filtrar Beneficiarios</a>*@
+                        @*<a href="@Url.Action("FilterReviewBeneficiarios", "ClientePrepago", new { id = Model.First().idCliente })" class="btn btn-success btn-sm" > Filtrar Beneficiarios</a>*@
                         <a href="@Url.Action("FilterReview", "OrdenRecargaPrepago")" class="btn btn-danger btn-md">Regresar</a>
                     </div>
                 </div>
