--- a/Suma2Lealtad/Views/Reporte/FilterReporteTransacciones.cshtml
+++ b/Suma2Lealtad/Views/Reporte/FilterReporteTransacciones.cshtml
@@ -1,7 +1,7 @@
-﻿@model Suma2Lealtad.Models.ClientePrepago
+﻿@model Suma2Lealtad.Models.ReporteSuma
 
 @{
-    ViewBag.Title = "FilterBeneficiarios";
+    ViewBag.Title = "FilterReview";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,7 +10,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Cliente / Beneficiarios / Filtro de Búsqueda</h3>
+            <h3 class="panel-title">Suma / Reportes / Reporte de Transacciones / Parámetros del Reporte</h3>
         </div>
 
         <div class="panel-body">
@@ -22,30 +22,7 @@
                 <br />
             </div>
 
-            <form action="@Url.Action("FilterBeneficiarios", "ClientePrepago")" name="FilterForm" id="FilterForm" method="post" onsubmit="return validateForm();">
-
-                @Html.HiddenFor(model => model.idCliente)
-
-                <div class="editor-label col-md-4 control-label">
-                    Cliente :
-                </div>
-
-                <div class="editor-field col-md-6">
-                    @Html.TextBoxFor(model => model.nameCliente, new { @class = "form-control", @readonly = "true" })
-                </div>
-
-                <div class="editor-label col-md-4 control-label">
-                    RIF :
-                </div>
-                <div class="editor-form col-md-6">
-                    @Html.TextBoxFor(model => model.rifCliente, new { @class = "form-control", @readonly = "true" })
-                </div>
-                <div class="editor-label col-md-4 control-label">
-                    Teléfono :
-                </div>
-                <div class="editor-form col-md-6">
-                    @Html.TextBoxFor(model => model.phoneCliente, new { @class = "form-control", @readonly = "true" })
-                </div>
+            <form action="@Url.Action("ReporteTransacciones", "Reporte")" name="FilterForm" id="FilterForm" method="post" onsubmit="return validateForm();">
 
                 <div class="editor-label col-md-4 control-label"></div>
                 <div class="editor-field col-md-8">
@@ -58,55 +35,40 @@
 
                 <div class="editor-field col-md-6">
                     <input type="text" id="numdoc" name="numdoc" maxlength="10" placeholder="V-12345678" class="form-control">
-                    <span id="field1"></span>
+                    <span id="field11"></span>
                 </div>
 
                 <div class="editor-label col-md-4 control-label">
-                    Nombre :
+                    * Fecha desde :
                 </div>
 
                 <div class="editor-field col-md-6">
-                    <input type="text" id="name" name="name" value="" maxlength="50" placeholder="Escriba el nombre" class="form-control">
+                    <input type="text" id="fechadesde" name="fechadesde" maxlength="10" placeholder="dd/mm/aaaa" class="form-control">
                     <span id="field2"></span>
                 </div>
 
                 <div class="editor-label col-md-4 control-label">
-                    Correo Electrónico :
+                    * Fecha hasta :
                 </div>
 
                 <div class="editor-field col-md-6">
-                    <input type="text" id="email" name="email" value="" maxlength="50" placeholder="correo@dominio.com" class="form-control">
+                    <input type="text" id="fechahasta" name="fechahasta" maxlength="10" placeholder="dd/mm/aaaa" class="form-control">
                     <span id="field3"></span>
                 </div>
 
                 <div class="editor-label col-md-4 control-label">
-                    Estado de Afiliación :
+                    * Tipo de Transacción :
                 </div>
 
                 <div class="editor-field col-md-6">
-                    @Html.DropDownList("estadoAfiliacion",
-                                       new SelectList(Model.EstadoDeAfiliacionOptions,
+                    @Html.DropDownList("TipoTransaccion",
+                                       new SelectList(Model.TipoTransaccionOptions,
                                        "id",
-                                       "estado",
-                                       Model.EstadoDeAfiliacionOptions),
+                                       "tipo",
+                                       Model.TipoTransaccionOptions),
                                        new { @class = "form-control" }
                                        )
                     <span id="field4"></span>
-                </div>
-
-                <div class="editor-label col-md-4 control-label">
-                    Estado de Tarjeta :
-                </div>
-
-                <div class="editor-field col-md-6">
-                    @Html.DropDownList("estadoTarjeta",
-                                       new SelectList(Model.EstadoDeTarjetaOptions,
-                                       "id",
-                                       "estado",
-                                       Model.EstadoDeTarjetaOptions),
-                                       new { @class = "form-control" }
-                                       )
-                    <span id="field5"></span>
                 </div>
 
                 <br />
@@ -118,25 +80,42 @@
 
                 <div class="col-md-12 col-btn">
                     <div class="pull-right">
-                        <input type="submit" class="btn btn-success btn-md" value="Buscar Beneficiario" />
-                        <a href="@Url.Action("Index", "ClientePrepago", new { rif = Model.rifCliente })" class="btn btn-danger btn-md">Regresar</a>
+                        <input type="submit" class="btn btn-success btn-md" value="Generar Reporte" />
                     </div>
-
                 </div>
-        <!-- form-group -->
+                <!-- form-group -->
 
-        </form>
+            </form>
+
+        </div>
+        <!--// panel-body -->
 
     </div>
-    <!--// panel-body -->
-
-</div>
-<!--// panel -->
+    <!--// panel -->
 
 </div>
 <!--// container -->
 
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
 <script>
+    //$(document).ready(function () {
+    //    $(".numdoc").hide();
+    //});
+
+    //var Myinterval = setInterval(function () {
+    //    AjustarParametros()
+    //}, 100);
+
+    //function AjustarParametros() {
+    //    if ($("#TipoConsulta").val() == "Cliente") {
+    //        $(".idCliente").show();
+    //        $(".numdoc").hide();
+    //    }
+    //    else {
+    //        $(".idCliente").hide();
+    //        $(".numdoc").show();
+    //    }
+    //}
 
     function validateNumDoc() {
         var numdoc = document.getElementById('numdoc').value;
@@ -148,7 +127,7 @@
         var RegExPattern3 = /^([Pp]){1}(-){1}([A-Za-z0-9]){3,10}$/;
         var RegExPattern4 = /^([Pp]){1}([A-Za-z0-9]){3,10}$/;
         if (RegExPattern.test(numdoc) == false && RegExPattern2.test(numdoc) == false && RegExPattern3.test(numdoc) == false && RegExPattern4.test(numdoc) == false) {
-            spanMessage('field1', '* Formato Número de Documento/Cédula Incorrecto. (V-12345678)');
+            spanMessage('field11', '* Formato Número de Documento/Cédula Incorrecto. (V-12345678)');
             document.getElementById('numdoc').value = "";
             document.getElementById('numdoc').focus();
             return false;
@@ -165,7 +144,7 @@
         else if (RegExPattern4.test(numdoc) != false) {
             document.getElementById('numdoc').value = numdoc.substring(0, 1).toUpperCase() + "-" + numdoc.substring(1).toUpperCase();
         }
-        document.getElementById('field1').value = "";
+        LimpiarSpanMessage('field11');
         return true;
     }
 
@@ -177,28 +156,51 @@
         span.appendChild(document.createTextNode(mensaje));
     }
 
-    function validateName() {
-        var name = document.getElementById('name').value;
-        if (name.length == 0)
-            return true;
-        if (!name.match(/^[a-zA-Z''-'\s]*$/)) {
-            spanMessage('field2', '* Formato Nombre Incorrecto.');
-            document.getElementById('name').value = " ";
-            document.getElementById('name').focus();
+    function LimpiarSpanMessage(idelemento) {
+        var span = document.getElementById(idelemento);
+        while (span.firstChild) {
+            span.removeChild(span.firstChild);
+        }
+    }
+
+    function validateFechaDesde() {
+        var fecha = document.getElementById('fechadesde').value;
+        if (fecha.length == 0) {
+            spanMessage('field2', '* Debe ingresar Fecha desde');
+            document.getElementById('fechadesde').focus();
             return false;
         }
+        var RegExPattern = /^([0][1-9]|[12][0-9]|3[01])(\/)([0][1-9]|[1][0-2])(\/)(\d{4})$/;
+        if (RegExPattern.test(fecha) == false) {
+            spanMessage('field2', '* Formato Fecha Incorrecto. (dd/mm/aaaa)');
+            document.getElementById('fechadesde').value = "";
+            document.getElementById('fechadesde').focus();
+            return false;
+        }
+        LimpiarSpanMessage('field2');
         return true;
     }
 
-    function validateEmail() {
-        var email = document.getElementById('email').value;
-        if (email.length == 0)
-            return true;
+    function validateFechaHasta() {
+        var fecha = document.getElementById('fechahasta').value;
+        if (fecha.length == 0) {
+            spanMessage('field3', '* Debe ingresar Fecha hasta');
+            document.getElementById('fechahasta').focus();
+            return false;
+        }
+        var RegExPattern = /^([0][1-9]|[12][0-9]|3[01])(\/)([0][1-9]|[1][0-2])(\/)(\d{4})$/
+        if (RegExPattern.test(fecha) == false) {
+            spanMessage('field3', '* Formato Fecha Incorrecto. (dd/mm/aaaa)');
+            document.getElementById('fechahasta').value = "";
+            document.getElementById('fechahasta').focus();
+            return false;
+        }
+        LimpiarSpanMessage('field3');
         return true;
     }
 
     function validateForm() {
-        if (validateNumDoc() && validateName() && validateEmail()) {
+        if (validateNumDoc() && validateFechaDesde() && validateFechaHasta()) {
             return true;
         }
         else {
