--- a/Suma2Lealtad/Views/Reporte/ReporteCompras.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteCompras.cshtml
@@ -129,7 +129,7 @@
                             </td>
                             <td>
                                 @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
-                                @(String.Format("{0}", item.fecha.ToString("dd-MM-yyyy")))
+                                @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.monto)
