--- a/Suma2Lealtad/Views/Reporte/ReporteComprasPDF.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteComprasPDF.cshtml
@@ -212,7 +212,7 @@ else
                 </td>
                 <td>
                     @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
-                    @(String.Format("{0}", item.fecha.ToString("dd-MM-yyyy")))
+                    @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.monto)
