--- a/Suma2Lealtad/Views/Reporte/ReporteTarjetas.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteTarjetas.cshtml
@@ -126,7 +126,7 @@
                             </td>
                             <td>
                                 @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
-                                @(String.Format("{0}", item.fecha.ToString("dd-MM-yyyy")))
+                                @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                             </td>
                             <td>
                                 @*@Html.DisplayFor(modelItem => item.numerotarjeta)*@
