--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -8,9 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    @*<title>@Session["titulo"].ToString()</title>*@
-    <title>Administrador SUMA/PREPAGO</title>
 
+    @if (@Session["titulo"].ToString() != null)
+      {
+        <title>@Session["titulo"].ToString()</title>
+      }
+      else
+      {
+        <title>Administrador SUMA/PREPAGO</title>
+      }
 
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/style.css")" rel="stylesheet">
@@ -95,13 +101,13 @@
 
             $('#cod_estado').change(function () {
                 $.getJSON('@Url.Action("/CiudadList/")' + $('#cod_estado').val(), function (data) {
-                var items = '<option value=" ">Seleccione una Ciudad</option>';
-                $.each(data, function (i, district) {
-                    items += "<option value='" + district.Value + "'>" + district.Text + "</option>";
+                    var items = '<option value=" ">Seleccione una Ciudad</option>';
+                    $.each(data, function (i, district) {
+                        items += "<option value='" + district.Value + "'>" + district.Text + "</option>";
+                    });
+                    $('#cod_ciudad').html(items);
                 });
-                $('#cod_ciudad').html(items);
             });
-        });
 
         @*$('#Afiliado_cod_estado').change(function () {
             $.getJSON('@Url.Action("/CiudadList/")' + $('#Afiliado_cod_estado').val(), function (data) {
@@ -113,8 +119,8 @@
             });
         });*@
 
-        $('#cod_ciudad').change(function () {
-            $.getJSON('@Url.Action("/MunicipioList/")' + $('#cod_ciudad').val(), function (data) {
+            $('#cod_ciudad').change(function () {
+                $.getJSON('@Url.Action("/MunicipioList/")' + $('#cod_ciudad').val(), function (data) {
                 var items = '<option value=" ">Seleccione un Municipio</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
@@ -133,8 +139,8 @@
             });
         });*@
 
-        $('#cod_municipio').change(function () {
-            $.getJSON('@Url.Action("/ParroquiaList/")' + $('#cod_municipio').val(), function (data) {
+            $('#cod_municipio').change(function () {
+                $.getJSON('@Url.Action("/ParroquiaList/")' + $('#cod_municipio').val(), function (data) {
                 var items = '<option value=" ">Seleccione una Parroquia</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
@@ -153,8 +159,8 @@
             });
         });*@
 
-        $('#cod_parroquia').change(function () {
-            $.getJSON('@Url.Action("/UrbanizacionList/")' + $('#cod_parroquia').val(), function (data) {
+            $('#cod_parroquia').change(function () {
+                $.getJSON('@Url.Action("/UrbanizacionList/")' + $('#cod_parroquia').val(), function (data) {
                 var items = '<option value=" ">Seleccione una Urbanización</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
@@ -173,133 +179,133 @@
             });
         });*@
 
-        $.validator.addMethod("regex", function (value, element, regexpr) {
-            return regexpr.test(value);
-        }, "Ingrese un valor correcto.");
+            $.validator.addMethod("regex", function (value, element, regexpr) {
+                return regexpr.test(value);
+            }, "Ingrese un valor correcto.");
 
-        $.validator.addMethod("regex2", function (value, element, regexpr) {
-            return regexpr.test(value);
-        }, "Formato Fecha Incorrecto (dd/mm/aaaa).");
+            $.validator.addMethod("regex2", function (value, element, regexpr) {
+                return regexpr.test(value);
+            }, "Formato Fecha Incorrecto (dd/mm/aaaa).");
 
-        $.validator.addMethod("valueNotEquals", function (value, element, arg) {
-            return arg != value;
-        }, "Es requerido seleccionar un valor de la lista.");
+            $.validator.addMethod("valueNotEquals", function (value, element, arg) {
+                return arg != value;
+            }, "Es requerido seleccionar un valor de la lista.");
 
-        var $validateFilter = $("#FilterForm").validate({
-            rules: {
-                email: {
-                    email: true,
-                    minlength: 3
+            var $validateFilter = $("#FilterForm").validate({
+                rules: {
+                    email: {
+                        email: true,
+                        minlength: 3
+                    }
                 }
-            }
-        });
+            });
 
-        var $validator = $("#commentForm").validate({
-            rules: {
-                name: {
-                    required: true,
-                    minlength: 3
-                },
-                
-                lastname1: {
-                    required: true,
-                    minlength: 3
-                },
+            var $validator = $("#commentForm").validate({
+                rules: {
+                    name: {
+                        required: true,
+                        minlength: 3
+                    },
 
-                email: {
-                    required: true,
-                    email: true,
-                    minlength: 3
-                },
+                    lastname1: {
+                        required: true,
+                        minlength: 3
+                    },
 
-                birthdate: {
-                    required: true,
-                    regex2: /^([0][1-9]|[12][0-9]|3[01])(\/)([0][1-9]|[1][0-2])(\/)(\d{4})$/
-                },
+                    email: {
+                        required: true,
+                        email: true,
+                        minlength: 3
+                    },
 
-                phone1: {
-                    required: true,
-                    minlength: 3
-                },
+                    birthdate: {
+                        required: true,
+                        regex2: /^([0][1-9]|[12][0-9]|3[01])(\/)([0][1-9]|[1][0-2])(\/)(\d{4})$/
+                    },
 
-                gender: {
-                    valueNotEquals: "0"
-                },
+                    phone1: {
+                        required: true,
+                        minlength: 3
+                    },
 
-                maritalstatus: {
-                    valueNotEquals: "0"
-                },
+                    gender: {
+                        valueNotEquals: "0"
+                    },
 
-                nationality: {
-                    valueNotEquals: "0"
-                },
+                    maritalstatus: {
+                        valueNotEquals: "0"
+                    },
 
-                file: {
-                    required: true,
-                },
+                    nationality: {
+                        valueNotEquals: "0"
+                    },
 
-                cod_estado: {
-                    valueNotEquals: " "
-                },
+                    file: {
+                        required: true,
+                    },
 
-                cod_ciudad: {
-                    valueNotEquals: " "
-                },
+                    cod_estado: {
+                        valueNotEquals: " "
+                    },
 
-                cod_municipio: {
-                    valueNotEquals: " "
-                },
+                    cod_ciudad: {
+                        valueNotEquals: " "
+                    },
 
-                cod_parroquia: {
-                    valueNotEquals: " "
-                },
+                    cod_municipio: {
+                        valueNotEquals: " "
+                    },
 
-                cod_urbanizacion: {
-                    valueNotEquals: " "
-                },
+                    cod_parroquia: {
+                        valueNotEquals: " "
+                    },
 
-                channelid: {
-                    valueNotEquals: "0"
-                },
+                    cod_urbanizacion: {
+                        valueNotEquals: " "
+                    },
 
-                emailfield: {
-                    required: true,
-                    email: true,
-                    minlength: 3
-                },
+                    channelid: {
+                        valueNotEquals: "0"
+                    },
 
-                namefield: {
-                    required: true,
-                    /*minlength: 3,*/
-                    regex: /^[0-9]+$/
-                },
+                    emailfield: {
+                        required: true,
+                        email: true,
+                        minlength: 3
+                    },
 
-                urlfield: {
-                    required: true,
-                    minlength: 3,
-                    url: true
+                    namefield: {
+                        required: true,
+                        /*minlength: 3,*/
+                        regex: /^[0-9]+$/
+                    },
+
+                    urlfield: {
+                        required: true,
+                        minlength: 3,
+                        url: true
+                    }
+                },
+                messages: {
+                    emailfield: {
+                        emailfield: "Enter a valid email address."
+                    }
                 }
-            },
-            messages: {
-                emailfield: {
-                    emailfield: "Enter a valid email address."
-                }
-            }
-        });
+            });
 
-        $('#rootwizard').bootstrapWizard({
-            'tabClass': 'nav nav-pills',
-            'onNext': function (tab, navigation, index) {
-                var $valid = $("#commentForm").valid();
-                if (!$valid ) {
-                    $validator.focusInvalid();
-                    return false;
-                }                
-            }
+            $('#rootwizard').bootstrapWizard({
+                'tabClass': 'nav nav-pills',
+                'onNext': function (tab, navigation, index) {
+                    var $valid = $("#commentForm").valid();
+                    if (!$valid) {
+                        $validator.focusInvalid();
+                        return false;
+                    }
+                }
+            });
+            window.prettyPrint && prettyPrint()
+
         });
-        window.prettyPrint && prettyPrint()
-        
-    });
     </script>
 
 </body>
